<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CurrencyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icon_back"
            android:src="@drawable/back"
            android:background="#00000000"
            android:onClick="Confirm"
            android:layout_centerVertical="true"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/chose_currency"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gr_language"
        android:layout_gravity="right"
        tools:ignore="RtlHardcoded">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:textSize="18sp"
            android:button="@drawable/check_button"
            android:id="@+id/usd"
            android:padding="8dp"
            android:onClick="onRadioButtonClicked"
            tools:ignore="UsingOnClickInXml" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vnd"
            android:textSize="18sp"
            android:id="@+id/vnd"
            android:button="@drawable/check_button"
            android:padding="8dp"
            android:onClick="onRadioButtonClicked"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rmb"
            android:textSize="18sp"
            android:id="@+id/rbm"
            android:button="@drawable/check_button"
            android:padding="8dp"
            android:onClick="onRadioButtonClicked"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yen"
            android:textSize="18sp"
            android:id="@+id/jpy"
            android:button="@drawable/check_button"
            android:padding="8dp"
            android:onClick="onRadioButtonClicked"
            tools:ignore="UsingOnClickInXml" />



    </RadioGroup>
</LinearLayout>