<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/setting_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/setting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:onClick="Return"
        android:contentDescription="@string/back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/spending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/spending"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/income_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spending" />

    <Button
        android:id="@+id/week_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:text="@string/week"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        android:onClick="ChoseWeek"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/month_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/month"
        android:textColor="#CFC9C9"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/week_button"
        android:onClick="ChoseMonth"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/year_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/year"
        android:textColor="#CFC9C9"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/week_button"
        android:onClick="ChoseYear"/>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="36dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/year_button" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/year_button" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="right"
        app:layout_constraintEnd_toStartOf="@+id/currency"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toTopOf="@id/confirm"/>

    <TextView
        android:id="@+id/currency"
        android:layout_width="60sp"
        android:layout_height="35sp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/currency"
        android:gravity="center"
        android:text="@string/vnd"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/amount"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/amount" />

    <View
        android:id="@+id/chose_day"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:background="@drawable/calendar" />

    <ImageButton
        android:id="@+id/language_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/chose_day"
        app:layout_constraintStart_toStartOf="@+id/chose_day"
        app:layout_constraintTop_toTopOf="@+id/chose_day"
        app:srcCompat="@mipmap/language"
        android:onClick="ChoseLanguage"
        android:contentDescription="@string/chose_date"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/chose_day"
        app:layout_constraintEnd_toEndOf="@+id/chose_day"
        app:layout_constraintTop_toTopOf="@+id/chose_day"
        app:srcCompat="@drawable/pick"
        android:background="#00000000"
        tools:ignore="UsingOnClickInXml,VectorDrawableCompat"
        android:onClick="ChoseLanguage"
        android:contentDescription="@string/chose_date" />

    <TextView
        android:id="@+id/language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/language"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/language_icon"
        app:layout_constraintEnd_toStartOf="@+id/cur_language"
        app:layout_constraintStart_toEndOf="@+id/language_icon"
        app:layout_constraintTop_toTopOf="@+id/language_icon"
        android:onClick="ChoseLanguage"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/cur_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="right"
        android:textSize="18sp"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/pick"
        app:layout_constraintEnd_toStartOf="@+id/pick"
        app:layout_constraintStart_toEndOf="@+id/month_button"
        app:layout_constraintTop_toTopOf="@+id/pick"
        tools:ignore="RtlHardcoded,UsingOnClickInXml"
        android:onClick="ChoseLanguage"/>

    <View
        android:id="@+id/chose_currency"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/chose_day"
        android:background="@drawable/calendar" />

    <ImageButton
        android:id="@+id/currency_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/chose_currency"
        app:layout_constraintStart_toStartOf="@+id/chose_currency"
        app:layout_constraintTop_toTopOf="@+id/chose_currency"
        app:srcCompat="@mipmap/language"
        android:onClick="ChoseCurrency"
        android:contentDescription="@string/chose_date"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/pick_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/chose_currency"
        app:layout_constraintEnd_toEndOf="@+id/chose_currency"
        app:layout_constraintTop_toTopOf="@+id/chose_currency"
        app:srcCompat="@drawable/pick"
        android:background="#00000000"
        tools:ignore="UsingOnClickInXml,VectorDrawableCompat"
        android:onClick="ChoseCurrency"
        android:contentDescription="@string/chose_date" />

    <TextView
        android:id="@+id/currency_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/currency"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/currency_icon"
        app:layout_constraintEnd_toStartOf="@+id/cur_currency"
        app:layout_constraintStart_toEndOf="@+id/currency_icon"
        app:layout_constraintTop_toTopOf="@+id/currency_icon"
        android:onClick="ChoseCurrency"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/cur_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/vnd"
        android:gravity="right"
        android:textSize="18sp"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/pick_currency"
        app:layout_constraintEnd_toStartOf="@+id/pick_currency"
        app:layout_constraintStart_toEndOf="@+id/month_button"
        app:layout_constraintTop_toTopOf="@+id/pick_currency"
        tools:ignore="RtlHardcoded,UsingOnClickInXml"
        android:onClick="ChoseCurrency"/>

    <Button
        android:id="@+id/confirm"
        style="@style/ConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/currency"
        app:layout_constraintStart_toStartOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        android:onClick="Confirm"/>


</androidx.constraintlayout.widget.ConstraintLayout>